Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <div id="content">
       <img src="images/transportation/transit.jpg">
+      <img src="images/transportation/transit.jpg">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
     </div>
   </div>
